# finance-analysis

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DATABASE_SCHEMA.md  LICENSE  README.md  TESTING.md  TEST_SUMMARY.md  __init__.py  calculators.py  config.yaml  database.py  load_transactions.py  loaders.py  pyproject.toml  pytest.ini  query_database.py  reports.py  requirements.txt  todo.md
app/: __init__.py  credit_card_analyser.py  portfolio_viewer.py
app/charts/: __init__.py  charts.py
app/components/: __init__.py
app/data/: __init__.py  queries.py  sql.py
app/tabs/: __init__.py  current_holdings.py  funds_list.py  mapping_status.py  portfolio_performance.py  price_history.py  transaction_history.py
config/: fund_rename_mapping.json  fund_ticker_mapping.json
mappings/: fund_rename_mapping.json
portfolio/: __init__.py
portfolio/analysis/: __init__.py  cross_reference.py  current_holdings.py  holding_period.py  models.py  performance.py  price_impact.py  report.py  trading_frequency.py
portfolio/core/: __init__.py  config.py  database.py  models.py
portfolio/loaders/: base.py  (+4 more)
scripts/: __init__.py  add_transaction.py  analyze_performance.py  analyze_transactions.py  apply_fund_mapping.py  data_quality_review.py  exclude_funds.py  load_transactions.py  update_prices.py  validate_database.py  verify_vip_data_completeness.py
src/: __init__.py  apply_fund_mapping.py  calculators.py  create_fund_ticker_mapping.py  database.py  download_ticker_data.py  exclude_funds.py  load_dodl_transactions.py  load_price_history.py  load_transactions.py  loaders.py  migrate_ticker_mappings.py  models.py  populate_ticker_mapping.py  price_history_loader.py  query_database.py  reports.py  standardize_fund_names.py  utils.py  validate_database.py
tests/: conftest.py  test_calculators.py  test_database.py  test_helpers.py  test_models.py  test_queries.py  test_update_prices.py  test_validate_database.py
(+11 files in other folders)
